--- a/samples/02-Transactions/04-TransactionsDelete/index.html
+++ b/samples/02-Transactions/04-TransactionsDelete/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<!--
-Budget Blitz Rest Api Sample
-basin.michael@gmail.com
-(c) Interblitz by Basin Michael, 2021.
--->
-<html>
-    <head>
-        <title>Budget Blitz</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <!-- js files -->
-        <script src="../../../codebase/webix.js" type="text/javascript"></script>
-
-        <!-- css files -->
-        <link rel="stylesheet" href="../../../codebase/webix.css" type="text/css" charset="utf-8">
-
-		  <link rel="stylesheet" href="../../../codebase-bb/font-awesome.css" type="text/css" charset="utf-8">
-
-        <script src="../../../config/environment.js" type="text/javascript" charset="utf-8"></script>
-
-    </head>
-    <body>
-        <script src="app/webmain.js" type="text/javascript" charset="utf-8">
-        </script>
-    </body>
-</html>
+<!DOCTYPE html><!--Budget Blitz Rest Api Samplebasin.michael@gmail.com(c) Interblitz by Basin Michael, 2021.--><html>    <head>        <title>Budget Blitz</title>        <meta charset="UTF-8">        <meta name="viewport" content="width=device-width, initial-scale=1.0">        <!-- js files -->        <script src="../../../codebase/webix.js" type="text/javascript"></script>        <!-- css files -->        <link rel="stylesheet" href="../../../codebase/webix.css" type="text/css" charset="utf-8">        <link rel="stylesheet" href="../../../codebase-bb/font-awesome.css" type="text/css" charset="utf-8">        <link rel="stylesheet" href="../../../codebase-bb/material-icons.css" type="text/css" charset="utf-8">        <script src="../../../config/environment.js" type="text/javascript" charset="utf-8"></script>    </head>    <body>        <script src="app/webmain.js" type="text/javascript" charset="utf-8">        </script>    </body></html>
